Преименованы класcы СSS

--- a/index.html
+++ b/index.html
@@ -50,23 +50,23 @@
                     <h2 class="visually-hidden">Наши преимущества</h2>
                     <ul class="list-decoration">
                         <li>
-                            <h3 class="hero-subtitle-s2">ВНИМАНИЕ К ДЕТАЛЯМ</h3>
-                            <p class="hero-text-s2">Идейные соображения, а также начало повседневной работы по
+                            <h3 class="hero-second-subtitle">ВНИМАНИЕ К ДЕТАЛЯМ</h3>
+                            <p class="hero-second-text">Идейные соображения, а также начало повседневной работы по
                                 формированию позиции.</p>
                         </li>
                         <li>
-                            <h3 class="hero-subtitle-s2">ПУНКТУАЛЬНОСТЬ</h3>
-                            <p class="hero-text-s2">Задача организации, в особенности же рамки и место обучения кадров
+                            <h3 class="hero-second-subtitle">ПУНКТУАЛЬНОСТЬ</h3>
+                            <p class="hero-second-text">Задача организации, в особенности же рамки и место обучения кадров
                                 влечет за собой.</p>
                         </li>
                         <li>
-                            <h3 class="hero-subtitle-s2">ПЛАНИРОВАНИЕ</h3>
-                            <p class="hero-text-s2">Равным образом консультация с широким активом в значительной степени
+                            <h3 class="hero-second-subtitle">ПЛАНИРОВАНИЕ</h3>
+                            <p class="hero-second-text">Равным образом консультация с широким активом в значительной степени
                                 обуславливает.</p>
                         </li>
                         <li>
-                            <h3 class="hero-subtitle-s2">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
-                            <p class="hero-text-s2">Значимость этих проблем настолько очевидна, что реализация плановых
+                            <h3 class="hero-second-subtitle">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
+                            <p class="hero-second-text">Значимость этих проблем настолько очевидна, что реализация плановых
                                 заданий.</p>
                         </li>
                     </ul>
@@ -84,28 +84,28 @@
                 </div>
             </section>
             <!-- Секция 4 -->
-            <section class="hero-s4">
-                <h2 class="hero-title-s4">Наша команда</h2>
+            <section class="hero-fourth">
+                <h2 class="hero-fourth-title">Наша команда</h2>
                 <ul class="list-decoration">
                     <li class="">
                         <img src="images/Игорь Демьяненко.jpg" alt="на фото Игорь Демьяненко" width="270px">
-                        <h3 class="hero-subtitle-s4">Игорь Демьяненко</h3>
-                        <p class="hero-text-s4">Product Designer</p>
+                        <h3 class="user">Игорь Демьяненко</h3>
+                        <p class="job-user">Product Designer</p>
                     </li>
                     <li class="">
                         <img src="images/Ольга Репина.jpg" alt="на фото Ольга Репина" width="270px">
-                        <h3 class="hero-subtitle-s4">Ольга Репина</h3>
-                        <p class="hero-text-s4">Frontend Developer</p>
+                        <h3 class="user">Ольга Репина</h3>
+                        <p class="job-user">Frontend Developer</p>
                     </li>
                     <li class="">
                         <img src="images/Николай Тарасов.jpg" alt="на фото Николай Тарасов" width="270px">
-                        <h3 class="hero-subtitle-s4">Николай Тарасов</h3>
-                        <p class="hero-text-s4">Marketing</p>
+                        <h3 class="user">Николай Тарасов</h3>
+                        <p class="job-user">Marketing</p>
                     </li>
                     <li class="">
                         <img src="images/Михаил Ермаков.jpg" alt="на фото Михаил Ермаков" width="270px">
-                        <h3 class="hero-subtitle-s4">Михаил Ермаков</h3>
-                        <p class="hero-text-s4">UI Designer</p>
+                        <h3 class="user">Михаил Ермаков</h3>
+                        <p class="job-user">UI Designer</p>
                     </li>
                 </ul>
             </section>
