Переименованы классы СSS

--- a/portfolio.html
+++ b/portfolio.html
@@ -48,47 +48,47 @@
             <ul class="list-decoration">
                 <li>
                     <img src="./images/num7.jpg" alt="ноутбук" width="370">
-                    <h3 class="portfolio-subtitle-s2">Технокряк</h3>
+                    <h3 class="portfolio-name">Технокряк</h3>
                     <p class="portfolio-text-s2">Веб-сайт</p>
                 </li>
                 <li>
                     <img src="./images/num8.jpg" alt="баскетболисты" width="370">
-                    <h3 class="portfolio-subtitle-s2">Постер <span lang="en">New Orlean vs Golden Star</span></h3>
-                    <p class="portfolio-text-s2">Дизайн</p>
+                    <h3 class="portfolio-name">Постер <span lang="en">New Orlean vs Golden Star</span></h3>
+                    <p class="portfolio-project">Дизайн</p>
                 </li>
                 <li>
                     <img src="./images/num9.jpg" alt="логотип ресторана Seafood" width="370">
-                    <h3 class="portfolio-subtitle-s2">Ресторан <span lang="en">Seafood</span></h3>
-                    <p class="portfolio-text-s2">Приложение</p>
+                    <h3 class="portfolio-name">Ресторан <span lang="en">Seafood</span></h3>
+                    <p class="portfolio-project">Приложение</p>
                 </li>
                 <li>
                     <img src="./images/num4.jpg" alt="наушники" width="370">
-                    <h3 class="portfolio-subtitle-s2">Проект <span lang="en">Prime</span></h3>
-                    <p class="portfolio-text-s2">Маркетинг</p>
+                    <h3 class="portfolio-name">Проект <span lang="en">Prime</span></h3>
+                    <p class="portfolio-project">Маркетинг</p>
                 </li>
                 <li>
                     <img src="./images/num5.jpg" alt="коробки" width="370">
-                    <h3 class="portfolio-subtitle-s2">Проект <span lang="en">Boxes</span></h3>
-                    <p class="portfolio-text-s2">Приложение</p>
+                    <h3 class="portfolio-name">Проект <span lang="en">Boxes</span></h3>
+                    <p class="portfolio-project">Приложение</p>
                 </li>
                 <li>
                     <img src="./images/num6.jpg" alt="монитор" width="370">
-                    <h3 lang="en" class="portfolio-subtitle-s2">Inspiration has no Borders</h3>
-                    <p class="portfolio-text-s2">Веб-сайт</p>
+                    <h3 lang="en" class="portfolio-name">Inspiration has no Borders</h3>
+                    <p class="portfolio-project">Веб-сайт</p>
                 </li>
                 <li>
                     <img src="./images/num1.jpg" alt="книга" width="370">
-                    <h3 class="portfolio-subtitle-s2">Издание<span lang="en">Limited Edition</span></h3>
-                    <p class="portfolio-text-s2">Дизайн</p>
+                    <h3 class="portfolio-name">Издание<span lang="en">Limited Edition</span></h3>
+                    <p class="portfolio-project">Дизайн</p>
                 </li>
                 <li><img src="./images/num2.jpg" alt="бирка" width="370">
-                    <h3 class="portfolio-subtitle-s2">Проект <span lang="en">LAB</span></h3>
-                    <p class="portfolio-text-s2">Маркетинг</p>
+                    <h3 class="portfolio-name">Проект <span lang="en">LAB</span></h3>
+                    <p class="portfolio-project">Маркетинг</p>
                 </li>
                 <li>
                     <img src="./images/num3.jpg" alt=" ноутбук на котором печатают" width="370">
-                    <h3 lang="en" class="portfolio-subtitle-s2">Growing Business</h3>
-                    <p class="portfolio-text-s2">Приложение</p>
+                    <h3 lang="en" class="portfolio-name">Growing Business</h3>
+                    <p class="portfolio-project">Приложение</p>
                 </li>
             </ul>
         </section>
