--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 
-<body>
-    <div>
+<body class="container>
         <!-- ХЕДЕР -->
         <header class="header">
             <nav>
@@ -38,14 +37,14 @@
         <!-- МЕЙН -->
         <main>
             <!-- Секция 1 -->
-            <section class="hero">
+            <section class="section">
                 <div>
                     <h1 class="hero-title">Эффективные решения<br>для вашего бизнеса</h1>
                     <button class="btn-hero" type="button">Заказать услугу</button>
                 </div>
             </section>
             <!-- Секция 2 -->
-            <section>
+            <section class="section">
                 <div>
                     <h2 class="visually-hidden">Наши преимущества</h2>
                     <ul class="list-decoration">
@@ -73,7 +72,7 @@
                 </div>
             </section>
             <!-- Секция 3 -->
-            <section>
+            <section class="section">
                 <div>
                     <h2 class="hero-title-s3">Чем мы занимаемся</h2>
                     <ul class="list-decoration">
@@ -84,7 +83,7 @@
                 </div>
             </section>
             <!-- Секция 4 -->
-            <section class="hero-fourth">
+            <section class="section">
                 <h2 class="hero-fourth-title">Наша команда</h2>
                 <ul class="list-decoration">
                     <li class="">
