--- a/portfolio.html
+++ b/portfolio.html
@@ -18,95 +18,99 @@
 <body>
 
     <!-- ХЕДЕР -->
-    <header class="header">
-        <nav>
-            <a href="index.html" class="logo-header link-decoration"><span class="logo-color">Web</span>Studio</a>
+    <div class="container">
+        <header class="header">
+            <nav>
+                <a href="index.html" class="logo-header link-decoration"><span class="logo-color">Web</span>Studio</a>
 
-            <ul class="nav-list list-decoration">
-                <li><a href="./index.html" class="link-decoration link link-color">Студия</a></li>
-                <li><a href="./portfolio.html" class="link-decoration link link-color current">Портфолио</a></li>
-                <li><a href="" class="link-decoration link link-color">Контакты</a></li>
-            </ul>
+                <ul class="nav-list list-decoration">
+                    <li><a href="./index.html" class="link-decoration link link-color">Студия</a></li>
+                    <li><a href="./portfolio.html" class="link-decoration link link-color current">Портфолио</a></li>
+                    <li><a href="" class="link-decoration link link-color">Контакты</a></li>
+                </ul>
 
-        </nav>
-        <ul class="list-decoration">
-            <li><a href="tel:+380961111111" class="link-decoration link contacts">+380961111111</a></li>
-            <li><a href="mailto:info@devstudio.com" class="link-decoration link contacts">info@devstudio.com</a></li>
-        </ul>
-    </header>
-    <main>
-        <section>
-            <h1 class="visually-hidden">Портфолио</h1>
+            </nav>
             <ul class="list-decoration">
-                <li><button type="button" class="btn-portfolio">Все</button></li>
-                <li><button type="button" class="btn-portfolio">Веб-сайты</button></li>
-                <li><button type="button" class="btn-portfolio">Приложения</button></li>
-                <li><button type="button" class="btn-portfolio">Дизайн</button></li>
-                <li><button type="button" class="btn-portfolio">Маркетинг</button></li>
+                <li><a href="tel:+380961111111" class="link-decoration link contacts">+380961111111</a></li>
+                <li><a href="mailto:info@devstudio.com" class="link-decoration link contacts">info@devstudio.com</a></li>
             </ul>
-            <h2 class="visually-hidden">Наши работы</h2>
-            <ul class="list-decoration">
-                <li>
-                    <img src="./images/num7.jpg" alt="ноутбук" width="370">
-                    <h3 class="portfolio-name">Технокряк</h3>
-                    <p class="portfolio-text-s2">Веб-сайт</p>
-                </li>
-                <li>
-                    <img src="./images/num8.jpg" alt="баскетболисты" width="370">
-                    <h3 class="portfolio-name">Постер <span lang="en">New Orlean vs Golden Star</span></h3>
-                    <p class="portfolio-project">Дизайн</p>
-                </li>
-                <li>
-                    <img src="./images/num9.jpg" alt="логотип ресторана Seafood" width="370">
-                    <h3 class="portfolio-name">Ресторан <span lang="en">Seafood</span></h3>
-                    <p class="portfolio-project">Приложение</p>
-                </li>
-                <li>
-                    <img src="./images/num4.jpg" alt="наушники" width="370">
-                    <h3 class="portfolio-name">Проект <span lang="en">Prime</span></h3>
-                    <p class="portfolio-project">Маркетинг</p>
-                </li>
-                <li>
-                    <img src="./images/num5.jpg" alt="коробки" width="370">
-                    <h3 class="portfolio-name">Проект <span lang="en">Boxes</span></h3>
-                    <p class="portfolio-project">Приложение</p>
-                </li>
-                <li>
-                    <img src="./images/num6.jpg" alt="монитор" width="370">
-                    <h3 lang="en" class="portfolio-name">Inspiration has no Borders</h3>
-                    <p class="portfolio-project">Веб-сайт</p>
-                </li>
-                <li>
-                    <img src="./images/num1.jpg" alt="книга" width="370">
-                    <h3 class="portfolio-name">Издание<span lang="en">Limited Edition</span></h3>
-                    <p class="portfolio-project">Дизайн</p>
-                </li>
-                <li><img src="./images/num2.jpg" alt="бирка" width="370">
-                    <h3 class="portfolio-name">Проект <span lang="en">LAB</span></h3>
-                    <p class="portfolio-project">Маркетинг</p>
-                </li>
-                <li>
-                    <img src="./images/num3.jpg" alt=" ноутбук на котором печатают" width="370">
-                    <h3 lang="en" class="portfolio-name">Growing Business</h3>
-                    <p class="portfolio-project">Приложение</p>
-                </li>
-            </ul>
-        </section>
-    </main>
-    <!-- ФУТЕР -->
-    <footer class="footer">
+        </header>
+        <main>
+            <sectio class="section">
+                <h1 class="visually-hidden">Портфолио</h1>
+                <ul class="list-decoration">
+                    <li><button type="button" class="btn-portfolio">Все</button></li>
+                    <li><button type="button" class="btn-portfolio">Веб-сайты</button></li>
+                    <li><button type="button" class="btn-portfolio">Приложения</button></li>
+                    <li><button type="button" class="btn-portfolio">Дизайн</button></li>
+                    <li><button type="button" class="btn-portfolio">Маркетинг</button></li>
+                </ul>
+            </sectio>
+            <section class="section">
+                <h2 class="visually-hidden">Наши работы</h2>
+                <ul class="list-decoration">
+                    <li>
+                        <img src="./images/num7.jpg" alt="ноутбук" width="370">
+                        <h3 class="portfolio-name">Технокряк</h3>
+                        <p class="portfolio-text-s2">Веб-сайт</p>
+                    </li>
+                    <li>
+                        <img src="./images/num8.jpg" alt="баскетболисты" width="370">
+                        <h3 class="portfolio-name">Постер <span lang="en">New Orlean vs Golden Star</span></h3>
+                        <p class="portfolio-project">Дизайн</p>
+                    </li>
+                    <li>
+                        <img src="./images/num9.jpg" alt="логотип ресторана Seafood" width="370">
+                        <h3 class="portfolio-name">Ресторан <span lang="en">Seafood</span></h3>
+                        <p class="portfolio-project">Приложение</p>
+                    </li>
+                    <li>
+                        <img src="./images/num4.jpg" alt="наушники" width="370">
+                        <h3 class="portfolio-name">Проект <span lang="en">Prime</span></h3>
+                        <p class="portfolio-project">Маркетинг</p>
+                    </li>
+                    <li>
+                        <img src="./images/num5.jpg" alt="коробки" width="370">
+                        <h3 class="portfolio-name">Проект <span lang="en">Boxes</span></h3>
+                        <p class="portfolio-project">Приложение</p>
+                    </li>
+                    <li>
+                        <img src="./images/num6.jpg" alt="монитор" width="370">
+                        <h3 lang="en" class="portfolio-name">Inspiration has no Borders</h3>
+                        <p class="portfolio-project">Веб-сайт</p>
+                    </li>
+                    <li>
+                        <img src="./images/num1.jpg" alt="книга" width="370">
+                        <h3 class="portfolio-name">Издание<span lang="en">Limited Edition</span></h3>
+                        <p class="portfolio-project">Дизайн</p>
+                    </li>
+                    <li><img src="./images/num2.jpg" alt="бирка" width="370">
+                        <h3 class="portfolio-name">Проект <span lang="en">LAB</span></h3>
+                        <p class="portfolio-project">Маркетинг</p>
+                    </li>
+                    <li>
+                        <img src="./images/num3.jpg" alt=" ноутбук на котором печатают" width="370">
+                        <h3 lang="en" class="portfolio-name">Growing Business</h3>
+                        <p class="portfolio-project">Приложение</p>
+                    </li>
+                </ul>
+            </sectio>
+        </main>
+        <!-- ФУТЕР -->
+        <footer class="footer">
 
-        <a href="./index.html" class="logo-footer link-decoration"><span class="logo-color">Web</span>Studio</a>
+            <a href="./index.html" class="logo-footer link-decoration"><span class="logo-color">Web</span>Studio</a>
 
-        <address>
-            <ul class="list-decoration">
-                <li><a href="" class="link-decoration address">г. Киев, пр-т Леси Украинки, 26</a></li>
-                <li><a href="tel:+380961111111" class="link-decoration contacts-footer">+380961111111</a></li>
-                <li><a href="mailto:info@devstudio.com" class="link-decoration contacts-footer">info@devstudio.com</a>
-                </li>
-            </ul>
-        </address>
-    </footer>
+            <address>
+                <ul class="list-decoration">
+                    <li><a href="" class="link-decoration address">г. Киев, пр-т Леси Украинки, 26</a></li>
+                    <li><a href="tel:+380961111111" class="link-decoration contacts-footer">+380961111111</a></li>
+                    <li><a href="mailto:info@devstudio.com" class="link-decoration contacts-footer">info@devstudio.com</a>
+                    </li>
+                </ul>
+            </address>
+        </footer>
+    </div>
 </body>
 
 </html>
