--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.css">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 
-<body class="container>
+<body>
         <!-- ХЕДЕР -->
         <header class="header">
-            <nav>
+            <nav class="container">
                 <a href="./index.html" class="logo-header link-decoration"><span class="logo-color">Web</span>Studio</a>
 
                 <ul class="nav-list list-decoration">
@@ -28,7 +28,7 @@
                 </ul>
 
             </nav>
-            <ul class="list-decoration">
+            <ul class="list-decoration container">
                 <li><a href="tel:+380961111111" class="link-decoration link contacts">+380961111111</a></li>
                 <li><a href="mailto:info@devstudio.com" class="link-decoration link contacts">info@devstudio.com</a>
                 </li>
@@ -37,14 +37,14 @@
         <!-- МЕЙН -->
         <main>
             <!-- Секция 1 -->
-            <section class="section">
+            <section class="section container">
                 <div>
                     <h1 class="hero-title">Эффективные решения<br>для вашего бизнеса</h1>
                     <button class="btn-hero" type="button">Заказать услугу</button>
                 </div>
             </section>
             <!-- Секция 2 -->
-            <section class="section">
+            <section class="section container">
                 <div>
                     <h2 class="visually-hidden">Наши преимущества</h2>
                     <ul class="list-decoration">
@@ -72,7 +72,7 @@
                 </div>
             </section>
             <!-- Секция 3 -->
-            <section class="section">
+            <section class="section container">
                 <div>
                     <h2 class="hero-title-s3">Чем мы занимаемся</h2>
                     <ul class="list-decoration">
@@ -83,7 +83,7 @@
                 </div>
             </section>
             <!-- Секция 4 -->
-            <section class="section">
+            <section class="section container">
                 <h2 class="hero-fourth-title">Наша команда</h2>
                 <ul class="list-decoration">
                     <li class="">
@@ -110,12 +110,12 @@
             </section>
         </main>
         <!-- ФУТЕР -->
-        <footer class="footer">
+        <footer class="footer container">
 
             <a href="./index.html" class="logo-footer link-decoration"><span class="logo-color">Web</span>Studio</a>
 
             <address>
-                <ul class="list-decoration">
+                <ul class="list-decoration container">
                     <li><a href="" class="link-decoration address">г. Киев, пр-т Леси Украинки, 26</a></li>
                     <li><a href="tel:+380961111111" class="link-decoration contacts-footer">+380961111111</a></li>
                     <li><a href="mailto:info@devstudio.com"
