--- a/index.html
+++ b/index.html
@@ -24,18 +24,15 @@
                 <ul class="nav-list list-decoration container">
                     <li class="item"><a href="./index.html" class="link-decoration link link-color current">Студия</a></li>
                     <li class="item"><a href="./portfolio.html" class="link-decoration link link-color">Портфолио</a></li>
-                    <li class="item"><a href="" class="link-decoration link link-color">Контакты</a></li>
+                    <li class="item"><a href="#contacts" class="link-decoration link link-color">Контакты</a></li>
                 </ul>
 
             </nav>
-            <div class="order">
                 <ul class="contacts-list list-decoration container">
                     <li class="item"><a href="tel:+380961111111" class="link-decoration link contacts">+380961111111</a></li>
                     <li class="item"><a href="mailto:info@devstudio.com" class="link-decoration link contacts">info@devstudio.com</a></li>
-            
                 </ul>
-            </div>
-        </header>
+            </header>
         <!-- МЕЙН -->
         <main>
             <!-- Секция 1 -->
@@ -112,7 +109,7 @@
             </section>
         </main>
         <!-- ФУТЕР -->
-        <footer class="footer container">
+        <footer class="footer container" id="contacts">
 
             <a href="./index.html" class="logo-footer link-decoration"><span class="logo-color">Web</span>Studio</a>
 
