--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <nav class="nav">
                         <a href="./index.html" class="logo-header link-decoration"><span class="logo-color">Web</span>Studio</a>
 
-                        <ul class="nav-list list-decoration container">
+                        <ul class="nav-list list-decoration">
                             <li class="item"><a href="./index.html" class="link-decoration link link-color current">Студия</a></li>
                             <li class="item"><a href="./portfolio.html" class="link-decoration link link-color">Портфолио</a></li>
                             <li class="item"><a href="#contacts" class="link-decoration link link-color">Контакты</a></li>
