--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             </div>
             <!-- Секция 4 -->
             <div class="container">
-                <section class="section>
+                <section class="section">
                     <h2 class="hero-fourth-title">Наша команда</h2>
                     <ul class="list-users list-decoration">
                         <li class="users">
@@ -115,18 +115,16 @@
             </div>
         </main>
         <!-- ФУТЕР -->
-            <footer class="footer" id="contacts">
+            <footer class="footer container" id="contacts">
                 <div class="container">
-
-                <a href="./index.html" class="logo-footer link-decoration"><span class="logo-color">Web</span>Studio</a>
-
-                <address>
-                    <ul class="list-decoration container">
-                        <li><a href="" class="link-decoration address">г. Киев, пр-т Леси Украинки, 26</a></li>
-                        <li><a href="tel:+380961111111" class="link-decoration contacts-footer">+380961111111</a></li>
-                        <li><a href="mailto:info@devstudio.com" class="link-decoration contacts-footer">info@devstudio.com</a></li>
-                    </ul>
-                </address>
+                    <a href="./index.html" class="logo-footer link-decoration"><span class="logo-color">Web</span>Studio</a>
+                    <address>
+                        <ul class="list-decoration container">
+                            <li><a href="" class="link-decoration address">г. Киев, пр-т Леси Украинки, 26</a></li>
+                            <li><a href="tel:+380961111111" class="link-decoration contacts-footer">+380961111111</a></li>
+                            <li><a href="mailto:info@devstudio.com" class="link-decoration contacts-footer">info@devstudio.com</a></li>
+                        </ul>
+                    </address>
             </div>
             </footer>
     </div>
