--- a/portfolio.html
+++ b/portfolio.html
@@ -19,35 +19,38 @@
 
     <!-- ХЕДЕР -->
         <header class="header">
-            <nav class="nav container">
-                <a href="./index.html" class="logo-header link-decoration"><span class="logo-color">Web</span>Studio</a>
-
-                <ul class="nav-list list-decoration container">
-                    <li class="item"><a href="./index.html" class="link-decoration link link-color">Студия</a></li>
-                    <li class="item"><a href="./portfolio.html" class="link-decoration link link-color current">Портфолио</a></li>
-                    <li class="item"><a href="#contacts" class="link-decoration link link-color">Контакты</a></li>
-                </ul>
-
-            </nav>
-            <div class="">
-                <ul class="contacts-list list-decoration container">
+            <div class="container">
+                <nav class="nav">
+                    <a href="./index.html" class="logo-header link-decoration"><span class="logo-color">Web</span>Studio</a>
+        
+                    <ul class="nav-list list-decoration">
+                        <li class="item"><a href="./index.html" class="link-decoration link link-color current">Студия</a></li>
+                        <li class="item"><a href="./portfolio.html" class="link-decoration link link-color">Портфолио</a></li>
+                        <li class="item"><a href="#contacts" class="link-decoration link link-color">Контакты</a></li>
+                    </ul>
+        
+                </nav>
+                <ul class="contacts-list list-decoration">
                     <li class="item"><a href="tel:+380961111111" class="link-decoration link contacts">+380961111111</a></li>
                     <li class="item"><a href="mailto:info@devstudio.com" class="link-decoration link contacts">info@devstudio.com</a></li>
                 </ul>
             </div>
         </header>
         <main>
-            <sectio class="section container">
-                <h1 class="visually-hidden">Портфолио</h1>
-                <ul class="list-btn list-decoration">
-                    <li><button type="button" class="btn-portfolio">Все</button></li>
-                    <li><button type="button" class="btn-portfolio">Веб-сайты</button></li>
-                    <li><button type="button" class="btn-portfolio">Приложения</button></li>
-                    <li><button type="button" class="btn-portfolio">Дизайн</button></li>
-                    <li><button type="button" class="btn-portfolio">Маркетинг</button></li>
-                </ul>
-            </sectio>
-            <section class="section container">
+            <div class="container">
+                <sectio class="section">
+                    <h1 class="visually-hidden">Портфолио</h1>
+                    <ul class="list-btn list-decoration">
+                        <li class="item"><button type="button" class="btn-portfolio">Все</button></li>
+                        <li class="item"><button type="button" class="btn-portfolio">Веб-сайты</button></li>
+                        <li class="item"><button type="button" class="btn-portfolio">Приложения</button></li>
+                        <li class="item"><button type="button" class="btn-portfolio">Дизайн</button></li>
+                        <li class="item"><button type="button" class="btn-portfolio">Маркетинг</button></li>
+                    </ul>
+                </sectio>
+            </div>
+                <section class="section">
+            <div>
                 <h2 class="visually-hidden">Наши работы</h2>
                 <ul class="project-list list-decoration">
                     <li>
@@ -98,18 +101,18 @@
             </sectio>
         </main>
         <!-- ФУТЕР -->
-        <footer class="footer container" id="contacts">
-
-            <a href="./index.html" class="logo-footer link-decoration"><span class="logo-color">Web</span>Studio</a>
-
-            <address>
-                <ul class="list-decoration">
-                    <li><a href="" class="link-decoration address">г. Киев, пр-т Леси Украинки, 26</a></li>
-                    <li><a href="tel:+380961111111" class="link-decoration contacts-footer">+380961111111</a></li>
-                    <li><a href="mailto:info@devstudio.com" class="link-decoration contacts-footer">info@devstudio.com</a>
-                    </li>
-                </ul>
-            </address>
+        <footer class="footer" id="contacts">
+            <div class="container">
+                <a href="./index.html" class="logo-footer link-decoration"><span class="logo-color">Web</span>Studio</a>
+                <address>
+                    <ul class="list-decoration container">
+                        <li><a href="" class="link-decoration address">г. Киев, пр-т Леси Украинки, 26</a></li>
+                        <li><a href="tel:+380961111111" class="link-decoration contacts-footer">+380961111111</a></li>
+                        <li><a href="mailto:info@devstudio.com" class="link-decoration contacts-footer">info@devstudio.com</a>
+                        </li>
+                    </ul>
+                </address>
+            </div>
         </footer>
     </div>
 </body>
