--- a/index.html
+++ b/index.html
@@ -39,13 +39,12 @@
         <!-- МЕЙН -->
         <main>
             <!-- Секция 1 -->
-            <div class="container">
                 <section class="section background">
+                    <div class="container">
                         <h1 class="hero-title">Эффективные решения<br>для вашего бизнеса</h1>
                         <button class="btn-hero" type="button">Заказать услугу</button>
                     </div>
                 </section>
-            </div>
             <!-- Секция 2 -->
             <div class="container">
                 <section class="section">
@@ -115,7 +114,7 @@
             </div>
         </main>
         <!-- ФУТЕР -->
-            <footer class="footer container" id="contacts">
+            <footer class="footer" id="contacts">
                 <div class="container">
                     <a href="./index.html" class="logo-footer link-decoration"><span class="logo-color">Web</span>Studio</a>
                     <address>
@@ -125,7 +124,7 @@
                             <li><a href="mailto:info@devstudio.com" class="link-decoration contacts-footer">info@devstudio.com</a></li>
                         </ul>
                     </address>
-            </div>
+                </div>
             </footer>
     </div>
 </body>
