--- a/portfolio.html
+++ b/portfolio.html
@@ -24,8 +24,8 @@
                     <a href="./index.html" class="logo-header link-decoration"><span class="logo-color">Web</span>Studio</a>
         
                     <ul class="nav-list list-decoration">
-                        <li class="item"><a href="./index.html" class="link-decoration link link-color current">Студия</a></li>
-                        <li class="item"><a href="./portfolio.html" class="link-decoration link link-color">Портфолио</a></li>
+                        <li class="item"><a href="./index.html" class="link-decoration link link-color">Студия</a></li>
+                        <li class="item"><a href="./portfolio.html" class="link-decoration link link-color current">Портфолио</a></li>
                         <li class="item"><a href="#contacts" class="link-decoration link link-color">Контакты</a></li>
                     </ul>
         
@@ -37,67 +37,68 @@
             </div>
         </header>
         <main>
-            <div class="container">
-                <sectio class="section">
-                    <h1 class="visually-hidden">Портфолио</h1>
-                    <ul class="list-btn list-decoration">
-                        <li class="item"><button type="button" class="btn-portfolio">Все</button></li>
-                        <li class="item"><button type="button" class="btn-portfolio">Веб-сайты</button></li>
-                        <li class="item"><button type="button" class="btn-portfolio">Приложения</button></li>
-                        <li class="item"><button type="button" class="btn-portfolio">Дизайн</button></li>
-                        <li class="item"><button type="button" class="btn-portfolio">Маркетинг</button></li>
+            <sectio class="section">
+                    <div class="conteiner">
+                        <h1 class="visually-hidden">Портфолио</h1>
+                        <ul class="list-btn list-decoration">
+                            <li class="item"><button type="button" class="btn-portfolio">Все</button></li>
+                            <li class="item"><button type="button" class="btn-portfolio">Веб-сайты</button></li>
+                            <li class="item"><button type="button" class="btn-portfolio">Приложения</button></li>
+                            <li class="item"><button type="button" class="btn-portfolio">Дизайн</button></li>
+                            <li class="item"><button type="button" class="btn-portfolio">Маркетинг</button></li>
+                        </ul>
+                    </div>
+            </sectio>
+            <section class="section">
+                <div class="container"> 
+                    <h2 class="visually-hidden">Наши работы</h2>
+                    <ul class="project-list list-decoration">
+                        <li>
+                            <img src="./images/num7.jpg" alt="ноутбук" width="370">
+                            <h3 class="portfolio-name">Технокряк</h3>
+                            <p class="portfolio-text-s2">Веб-сайт</p>
+                        </li>
+                        <li>
+                            <img src="./images/num8.jpg" alt="баскетболисты" width="370">
+                            <h3 class="portfolio-name">Постер <span lang="en">New Orlean vs Golden Star</span></h3>
+                            <p class="portfolio-project">Дизайн</p>
+                        </li>
+                        <li>
+                            <img src="./images/num9.jpg" alt="логотип ресторана Seafood" width="370">
+                            <h3 class="portfolio-name">Ресторан <span lang="en">Seafood</span></h3>
+                            <p class="portfolio-project">Приложение</p>
+                        </li>
+                        <li>
+                            <img src="./images/num4.jpg" alt="наушники" width="370">
+                            <h3 class="portfolio-name">Проект <span lang="en">Prime</span></h3>
+                            <p class="portfolio-project">Маркетинг</p>
+                        </li>
+                        <li>
+                            <img src="./images/num5.jpg" alt="коробки" width="370">
+                            <h3 class="portfolio-name">Проект <span lang="en">Boxes</span></h3>
+                            <p class="portfolio-project">Приложение</p>
+                        </li>
+                        <li>
+                            <img src="./images/num6.jpg" alt="монитор" width="370">
+                            <h3 lang="en" class="portfolio-name">Inspiration has no Borders</h3>
+                            <p class="portfolio-project">Веб-сайт</p>
+                        </li>
+                        <li>
+                            <img src="./images/num1.jpg" alt="книга" width="370">
+                            <h3 class="portfolio-name">Издание<span lang="en">Limited Edition</span></h3>
+                            <p class="portfolio-project">Дизайн</p>
+                        </li>
+                        <li><img src="./images/num2.jpg" alt="бирка" width="370">
+                            <h3 class="portfolio-name">Проект <span lang="en">LAB</span></h3>
+                            <p class="portfolio-project">Маркетинг</p>
+                        </li>
+                        <li>
+                            <img src="./images/num3.jpg" alt=" ноутбук на котором печатают" width="370">
+                            <h3 lang="en" class="portfolio-name">Growing Business</h3>
+                            <p class="portfolio-project">Приложение</p>
+                        </li>
                     </ul>
-                </sectio>
-            </div>
-                <section class="section">
-            <div>
-                <h2 class="visually-hidden">Наши работы</h2>
-                <ul class="project-list list-decoration">
-                    <li>
-                        <img src="./images/num7.jpg" alt="ноутбук" width="370">
-                        <h3 class="portfolio-name">Технокряк</h3>
-                        <p class="portfolio-text-s2">Веб-сайт</p>
-                    </li>
-                    <li>
-                        <img src="./images/num8.jpg" alt="баскетболисты" width="370">
-                        <h3 class="portfolio-name">Постер <span lang="en">New Orlean vs Golden Star</span></h3>
-                        <p class="portfolio-project">Дизайн</p>
-                    </li>
-                    <li>
-                        <img src="./images/num9.jpg" alt="логотип ресторана Seafood" width="370">
-                        <h3 class="portfolio-name">Ресторан <span lang="en">Seafood</span></h3>
-                        <p class="portfolio-project">Приложение</p>
-                    </li>
-                    <li>
-                        <img src="./images/num4.jpg" alt="наушники" width="370">
-                        <h3 class="portfolio-name">Проект <span lang="en">Prime</span></h3>
-                        <p class="portfolio-project">Маркетинг</p>
-                    </li>
-                    <li>
-                        <img src="./images/num5.jpg" alt="коробки" width="370">
-                        <h3 class="portfolio-name">Проект <span lang="en">Boxes</span></h3>
-                        <p class="portfolio-project">Приложение</p>
-                    </li>
-                    <li>
-                        <img src="./images/num6.jpg" alt="монитор" width="370">
-                        <h3 lang="en" class="portfolio-name">Inspiration has no Borders</h3>
-                        <p class="portfolio-project">Веб-сайт</p>
-                    </li>
-                    <li>
-                        <img src="./images/num1.jpg" alt="книга" width="370">
-                        <h3 class="portfolio-name">Издание<span lang="en">Limited Edition</span></h3>
-                        <p class="portfolio-project">Дизайн</p>
-                    </li>
-                    <li><img src="./images/num2.jpg" alt="бирка" width="370">
-                        <h3 class="portfolio-name">Проект <span lang="en">LAB</span></h3>
-                        <p class="portfolio-project">Маркетинг</p>
-                    </li>
-                    <li>
-                        <img src="./images/num3.jpg" alt=" ноутбук на котором печатают" width="370">
-                        <h3 lang="en" class="portfolio-name">Growing Business</h3>
-                        <p class="portfolio-project">Приложение</p>
-                    </li>
-                </ul>
+                </div>  
             </sectio>
         </main>
         <!-- ФУТЕР -->
