--- a/portfolio.html
+++ b/portfolio.html
@@ -51,48 +51,66 @@
                     <ul class="project-list list-decoration">
                         <li class="item">
                             <img src="./images/num7.jpg" alt="ноутбук" width="370">
-                            <h3 class="portfolio-name">Технокряк</h3>
-                            <p class="portfolio-project">Веб-сайт</p>
+                            <div>
+                                <h3 class="portfolio-name">Технокряк</h3>
+                                <p class="portfolio-project">Веб-сайт</p>
+                            </div>
                         </li>
                         <li class="item">
                             <img src="./images/num8.jpg" alt="баскетболисты" width="370">
+                            <div>
                             <h3 class="portfolio-name">Постер <span lang="en">New Orlean vs Golden Star</span></h3>
                             <p class="portfolio-project">Дизайн</p>
+                            </div>
                         </li>
                         <li class="item">
                             <img src="./images/num9.jpg" alt="логотип ресторана Seafood" width="370">
+                            <div>
                             <h3 class="portfolio-name">Ресторан <span lang="en">Seafood</span></h3>
                             <p class="portfolio-project">Приложение</p>
+                            </div>
                         </li>
                         <li class="item">
                             <img src="./images/num4.jpg" alt="наушники" width="370">
+                            <div>
                             <h3 class="portfolio-name">Проект <span lang="en">Prime</span></h3>
                             <p class="portfolio-project">Маркетинг</p>
+                            </div>
                         </li>
                         <li class="item">
                             <img src="./images/num5.jpg" alt="коробки" width="370">
+                            <div>
                             <h3 class="portfolio-name">Проект <span lang="en">Boxes</span></h3>
                             <p class="portfolio-project">Приложение</p>
+                            </div>
                         </li>
                         <li class="item">
                             <img src="./images/num6.jpg" alt="монитор" width="370">
+                            <div>
                             <h3 lang="en" class="portfolio-name">Inspiration has no Borders</h3>
                             <p class="portfolio-project">Веб-сайт</p>
+                            </div>
                         </li>
                         <li class="item">
                             <img src="./images/num1.jpg" alt="книга" width="370">
+                            <div>
                             <h3 class="portfolio-name">Издание<span lang="en">Limited Edition</span></h3>
                             <p class="portfolio-project">Дизайн</p>
+                            </div>
                         </li>
                         <li class="item">
                             <img src="./images/num2.jpg" alt="бирка" width="370">
+                            <div>
                             <h3 class="portfolio-name">Проект <span lang="en">LAB</span></h3>
                             <p class="portfolio-project">Маркетинг</p>
+                            </div>
                         </li>
                         <li class="item">
                             <img src="./images/num3.jpg" alt=" ноутбук на котором печатают" width="370">
+                            <div>
                             <h3 lang="en" class="portfolio-name">Growing Business</h3>
                             <p class="portfolio-project">Приложение</p>
+                            </div>
                         </li>
                     </ul>
                 </div>  
