--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <!-- МЕЙН -->
         <main>
             <!-- Секция 1 -->
-                <section class="section background">
+                <section class="section hero-background">
                     <div class="container">
                         <h1 class="hero-title">Эффективные решения<br>для вашего бизнеса</h1>
                         <button class="btn-hero" type="button">Заказать услугу</button>
@@ -76,7 +76,7 @@
             <!-- Секция 3 -->
             <div class="container">
                 <section class="section">
-                        <h2 class="hero-title-s3">Чем мы занимаемся</h2>
+                        <h2 class="hero-third-title">Чем мы занимаемся</h2>
                         <ul class="image-list list-decoration">
                             <li class="item"><img src="images/img (1).jpg" alt="печать на клавиатуре" width="370px"></li>
                             <li class="item"><img src="images/img (2).jpg" alt="ноутбук и телефон в руке" width="370px"></li>
