--- a/portfolio.html
+++ b/portfolio.html
@@ -122,7 +122,7 @@
                 <a href="./index.html" class="logo-footer link-decoration"><span class="logo-color">Web</span>Studio</a>
                 <address>
                     <ul class="contacts-list-footer list-decoration container">
-                        <li class="item"><a href="" class="link-decoration address">г. Киев, пр-т Леси Украинки, 26</a></li>
+                        <li class="item"><a href="" class="link-decoration">г. Киев, пр-т Леси Украинки, 26</a></li>
                         <li class="item"><a href="tel:+380961111111"
                                 class="link-decoration contacts-footer .tel">+380961111111</a></li>
                         <li class="item"><a href="mailto:info@devstudio.com" class="link-decoration contacts-footer .mail">info@devstudio.com</a></li>
