--- a/portfolio.html
+++ b/portfolio.html
@@ -21,18 +21,19 @@
         <header class="header">
             <div class="container">
                 <nav class="nav">
-                    <a href="./index.html" class="logo-header link-decoration"><span class="logo-color">Web</span>Studio</a>
+                    <a href="./index.html" class="logo-header"><span class="logo-color">Web</span>Studio</a>
         
-                    <ul class="nav-list list-decoration">
-                        <li class="item"><a href="./index.html" class="link-decoration link link-color">Студия</a></li>
-                        <li class="item"><a href="./portfolio.html" class="link-decoration link link-color current">Портфолио</a></li>
-                        <li class="item"><a href="#contacts" class="link-decoration link link-color">Контакты</a></li>
+                    <ul class="nav-list">
+                        <li class="item"><a href="./index.html" class="link link-color current">Студия</a></li>
+                        <li class="item"><a href="./portfolio.html" class="link link-color">Портфолио</a></li>
+                        <li class="item"><a href="#contacts" class="link link-color">Контакты</a></li>
                     </ul>
         
                 </nav>
                 <ul class="contacts-list list-decoration">
                     <li class="item"><a href="tel:+380961111111" class="link-decoration link contacts">+380961111111</a></li>
-                    <li class="item"><a href="mailto:info@devstudio.com" class="link-decoration link contacts">info@devstudio.com</a></li>
+                    <li class="item"><a href="mailto:info@devstudio.com"
+                            class="link-decoration link contacts">info@devstudio.com</a></li>
                 </ul>
             </div>
         </header>
@@ -119,13 +120,12 @@
         <!-- ФУТЕР -->
         <footer class="footer" id="contacts">
             <div class="container">
-                <a href="./index.html" class="logo-footer link-decoration"><span class="logo-color">Web</span>Studio</a>
+                <a href="./index.html" class="logo-footer"><span class="logo-color">Web</span>Studio</a>
                 <address>
-                    <ul class="contacts-list-footer list-decoration container">
-                        <li class="item"><a href="" class="link-decoration">г. Киев, пр-т Леси Украинки, 26</a></li>
-                        <li class="item"><a href="tel:+380961111111"
-                                class="link-decoration contacts-footer .tel">+380961111111</a></li>
-                        <li class="item"><a href="mailto:info@devstudio.com" class="link-decoration contacts-footer .mail">info@devstudio.com</a></li>
+                    <ul class="contacts-list-footer">
+                        <li class="item"><a href="" class="address">г. Киев, пр-т Леси Украинки, 26</a></li>
+                        <li class="item"><a href="tel:+380961111111" class="contacts-footer .tel">+380961111111</a></li>
+                        <li><a href="mailto:info@devstudio.com" class="contacts-footer .mail">info@devstudio.com</a></li>
                     </ul>
                 </address>
             </div>
