--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
             <header class="header">
                 <div class="container">
                     <nav class="nav">
-                        <a href="./index.html" class="logo-header link-decoration"><span class="logo-color">Web</span>Studio</a>
+                        <a href="./index.html" class="logo-header"><span class="logo-color">Web</span>Studio</a>
 
-                        <ul class="nav-list list-decoration">
-                            <li class="item"><a href="./index.html" class="link-decoration link link-color current">Студия</a></li>
-                            <li class="item"><a href="./portfolio.html" class="link-decoration link link-color">Портфолио</a></li>
-                            <li class="item"><a href="#contacts" class="link-decoration link link-color">Контакты</a></li>
+                        <ul class="nav-list">
+                            <li class="item"><a href="./index.html" class="link link-color current">Студия</a></li>
+                            <li class="item"><a href="./portfolio.html" class="link link-color">Портфолио</a></li>
+                            <li class="item"><a href="#contacts" class="link link-color">Контакты</a></li>
                         </ul>
 
                     </nav>
@@ -39,15 +39,16 @@
         <!-- МЕЙН -->
         <main>
             <!-- Секция 1 -->
-                <section class="section hero-background">
+                <section class="hero">
                     <div class="container">
                         <h1 class="hero-title">Эффективные решения<br>для вашего бизнеса</h1>
                         <button class="btn-hero" type="button">Заказать услугу</button>
                     </div>
                 </section>
+
             <!-- Секция 2 -->
-            <div class="container">
                 <section class="section">
+                    <div class="container">
                         <h2 class="visually-hidden">Наши преимущества</h2>
                         <ul class="list-advantages list-decoration">
                             <li class="item">
@@ -71,62 +72,71 @@
                                     заданий.</p>
                             </li>
                         </ul>
+                    </div>
                 </section>
-            </div>
+            
             <!-- Секция 3 -->
-            <div class="container">
-                <section class="section">
+                <section class="section work">
+                    <div class="container">
                         <h2 class="hero-third-title">Чем мы занимаемся</h2>
-                        <ul class="image-list list-decoration">
+                        <ul class="image-list">
                             <li class="item"><img src="images/img (1).jpg" alt="печать на клавиатуре" width="370px"></li>
                             <li class="item"><img src="images/img (2).jpg" alt="ноутбук и телефон в руке" width="370px"></li>
                             <li class="item"><img src="images/img (3).jpg" alt="цветной гексагон в руке" width="370px"></li>
                         </ul>
+                    </div>
                 </section>
-            </div>
+            
             <!-- Секция 4 -->
-            <div class="container">
-                <section class="section">
-                    <h2 class="hero-fourth-title">Наша команда</h2>
-                    <ul class="list-users list-decoration">
-                        <li class="users">
-                            <img class="image-user" src="images/Игорь Демьяненко.jpg" alt="на фото Игорь Демьяненко" width="270px">
-                            <h3 class="user">Игорь Демьяненко</h3>
-                            <p class="job-user">Product Designer</p>
-                        </li>
-                        <li class="users">
-                            <img class="image-user" src="images/Ольга Репина.jpg" alt="на фото Ольга Репина" width="270px">
-                            <h3 class="user">Ольга Репина</h3>
-                            <p class="job-user">Frontend Developer</p>
-                        </li>
-                        <li class="users">
-                            <img class="image-user" src="images/Николай Тарасов.jpg" alt="на фото Николай Тарасов" width="270px">
-                            <h3 class="user">Николай Тарасов</h3>
-                            <p class="job-user">Marketing</p>
-                        </li>
-                        <li class="users">
-                            <img class="image-user" src="images/Михаил Ермаков.jpg" alt="на фото Михаил Ермаков" width="270px">
-                            <h3 class="user">Михаил Ермаков</h3>
-                            <p class="job-user">UI Designer</p>
-                        </li>
-                    </ul>
+                <section class="section background">
+                    <div class="container">
+                        <h2 class="hero-fourth-title">Наша команда</h2>
+                        <ul class="list-users">
+                            <li class="users">
+                                <img class="image-user" src="images/Игорь Демьяненко.jpg" alt="на фото Игорь Демьяненко" width="270px">
+                                <div class="user-thumb">
+                                    <h3 class="user">Игорь Демьяненко</h3>
+                                    <p class="job-user">Product Designer</p>
+                                </div>
+                            </li>
+                            <li class="users">
+                                <img class="image-user" src="images/Ольга Репина.jpg" alt="на фото Ольга Репина" width="270px">
+                                <div class="user-thumb">
+                                    <h3 class="user">Ольга Репина</h3>
+                                    <p class="job-user">Frontend Developer</p>
+                                </div>
+                            </li>
+                            <li class="users">
+                                <img class="image-user" src="images/Николай Тарасов.jpg" alt="на фото Николай Тарасов" width="270px">
+                                <div class="user-thumb">
+                                    <h3 class="user">Николай Тарасов</h3>
+                                    <p class="job-user">Marketing</p>
+                                </div>
+                            </li>
+                            <li class="users">
+                                <img class="image-user" src="images/Михаил Ермаков.jpg" alt="на фото Михаил Ермаков" width="270px">
+                                <div class="user-thumb">
+                                    <h3 class="user">Михаил Ермаков</h3>
+                                    <p class="job-user">UI Designer</p>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
                 </section>
-            </div>
-        </main>
+        </main
         <!-- ФУТЕР -->
             <footer class="footer" id="contacts">
                 <div class="container">
-                    <a href="./index.html" class="logo-footer link-decoration"><span class="logo-color">Web</span>Studio</a>
+                    <a href="./index.html" class="logo-footer"><span class="logo-color">Web</span>Studio</a>
                     <address>
-                        <ul class="contacts-list-footer list-decoration container">
-                            <li class="item"><a href="" class="link-decoration address">г. Киев, пр-т Леси Украинки, 26</a></li>
-                            <li class="item"><a href="tel:+380961111111" class="link-decoration contacts-footer .tel">+380961111111</a></li>
-                            <li class="item"><a href="mailto:info@devstudio.com" class="link-decoration contacts-footer .mail">info@devstudio.com</a></li>
+                        <ul class="contacts-list-footer">
+                            <li class="item"><a href="" class="address">г. Киев, пр-т Леси Украинки, 26</a></li>
+                            <li class="item"><a href="tel:+380961111111" class="contacts-footer .tel">+380961111111</a></li>
+                            <li><a href="mailto:info@devstudio.com" class="contacts-footer .mail">info@devstudio.com</a></li>
                         </ul>
                     </address>
                 </div>
             </footer>
-    </div>
 </body>
 
 </html>
